# sprout

./: Cargo.toml  README.md  flake.nix
docs/design/: algorithm.md  cli.md  config.md  feature-coverage.md  frontmatter.md  kakoune-plugin.md  mobile-workflow.md  nix-packaging.md  overview.md
kak/: sprout.kak
scripts/: migrate-from-org-drill.py
src/: cache.rs  cli.rs  config.rs  error.rs  frontmatter.rs  links.rs  main.rs  note.rs  output.rs  srs.rs  template.rs
src/commands/: done.rs  init.rs  list.rs  mod.rs  note.rs  promote.rs  review.rs  show.rs  stats.rs
tests/: integration.rs
tests/fixtures/: no_frontmatter.md  partial.md  tracked.md  untracked.md
