[package]
name = "sprout"
version = "0.1.0"
edition = "2021"
description = "Evergreen note cultivation CLI with spaced repetition for Zettelkasten workflows"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
colored = "2"
anyhow = "1"
regex = "1"
dirs = "6"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
