[package]
name = "sprout"
version = "0.1.0"
edition = "2021"
description = "Evergreen note cultivation CLI with spaced repetition for Zettelkasten workflows"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
walkdir = "2"
colored = "2"
anyhow = "1"
thiserror = "2"
regex = "1"
dirs = "6"
basic-toml = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
